[package]
authors = ["Andy Russell <arussell123@gmail.com>"]
name = "nourish-bot"
version = "0.1.0"

[dependencies]
Inflector = "0.2.0"
chrono = "0.2.21"
docopt = "0.6.80"
dotenv = "0.8.0"
hyper = "0.8.1"
lazy_static = "0.2.0"
linked-hash-map = "0.0.9"
regex = "0.1.66"
rustc-serialize = "0.3.19"
select = "0.3.0"
slack-hook = "0.1.2"
url = "0.5.9"
