[package]
authors = ["Andy Russell <arussell123@gmail.com>"]
name = "nourish-bot"
version = "0.1.0"
license = "MIT/Apache-2.0"

[dependencies]
Inflector = "0.10"
chrono = "0.3"
docopt = "0.7"
dotenv = "0.10"
lazy_static = "0.2.0"
linked-hash-map = "0.4"
regex = "0.2"
rustc-serialize = "0.3.19"
reqwest = "0.5"
select = "0.4"
slack-hook = "0.3"
url = "1"
